System-Design/design-youtube/k8s/base/db-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: video-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: video-platform
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: video-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: video-platform
spec:
  selector:
    app: redis
  ports:
  - port: 6379
